--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "twemoji": "^14.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
