--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "choices.js": "^11.1.0",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "downshift": "^9.0.9",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
     "react-select": "^5.10.1",
